--- a/guide1.html
+++ b/guide1.html
@@ -35,16 +35,16 @@
 					<div class="para2">
 						Three Governing Laws:
 						<ol>
-							<li> The Rule of Four: That if your side has four or more minions than the other, then the lane will push towards them.</li>
-							<li> The Rule of Backup: That the closer the wave is to a base, then the faster that backup will come from that base.</li>
+							<li> The Rule of Four: That if your side has four or more minions than the other, then the lane will push towards them</li>
+							<li> The Rule of Backup: That the closer the wave is to a base, then the faster that backup will come from that base</li>
 							<li> The Rule of Cannon: That cannon minions completely neglect the previous two rules, where cannon minions can equate between up to 2.5 to 4 caster minions, depending on whether the opposite side is focusing the cannon minion or not.</li>
 						</ol>
 					</div>
 					<div class="para1">
 						Freezing Techniques:
 						<ol>
-							<li> Hold Technique: Hold the minion backup approaching the wave at the farthermost brush from 	your tower, this is to allow the enemy minions to group up, at this point release the minions and allow them to collide with your minions.</li>
-							<li> Drag Technique: Firstly, build up the opposite minions to up to 4-6 more fully-health minions than your minions. Secondly, drag the wave out of lane, once your own wave has been defeated, until your next wave meets theirs at the edge of your turret.</li>
+							<li> Hold Technique: Hold the enemy minions approaching the wave at the farthermost brush from your tower; this is to allow the enemy minions to group up. At this point release the minions and allow them to collide with your minions.</li>
+							<li> Drag Technique: Firstly, build up the opposite minions to up to 4-6 more fully-health minions than your minions. Secondly, drag the wave out of lane, once your own wave has been defeated, until your next wave meets theirs at the edge of your turret..</li>
 							<li> Tank Technique: Only do this technique if you have sustain; all you have to do is stand in the middle of the lane and take minion aggro. Try to tank only a maximum of 4-5 minions. Also, if you enter a brush, minion aggro drops immediately.</li>
 						</ol>
 					</div>
@@ -52,10 +52,10 @@
 						<source src="freezing lane.mp4" type="video/mp4">
 					</video>
 					<div class="para3">
-						Freezing your lane is a great strategic move to allow you to control lane, and thus control your opponent as a means of zoning them. By freezing lane you are making it harder for your opponent to farm, and it puts them in a vulnerable position to be ganked. Inversely, it makes it easier for you to farm, and harder for you to be ganked.
+						Freezing your lane is a great strategic move to allow you to control lane, and thus control your opponent as a means of zoning them. By freezing lane you are making it harder for your opponent to farm, and it puts them in a vulnerable position to be ganked. Inversely, it makes it easier for you to farm and harder for you to be ganked.
 					</div>
 					<div class="para2">
-						It is good to freeze your lane if your opponent is being forced to stay in lane, and are forced to take jungle creeps. However, you should not be looking to freeze your lane when your opponent is roaming, teleporting away from lane, or when they have just joined a team fight, in this case you should be looking to push lane and take towers.
+						When freezing lane, it is good to do so when your opponent is being forced to stay in lane, or are being forced to take jungle creeps. However, you should not be looking to freeze your lane when your opponent is roaming, teleporting away from lane, or when they have just joined a team fight, in this case you should be looking to push lane and take towers
 					</div>
 					<div class="para2">
 						If you are ever caught in lane that has been frozen against you, the best way to break the freeze is to singularly last hit minions with a ranged ability, if your champion does not have any ranged abilities then it is better for you to roam instead.
@@ -72,7 +72,7 @@
 						<source src="super wave.mp4" type="video/mp4">
 					</video>
 					<div class="para3">
-						Super waves are a great tool to help control the map, they generally consist of up to 5 or more minions waves. Super waves are best to set up 1 minute before objectives come up in order to add pressure to the enemy team, helping you obtain objectives easier. If a super wave is successful, it has the potential of taking a tower, if it is not successful then all you lose is a lot of farm.
+						Super waves are a great tool to help control the map, they generally consist of up to 5 or more minions waves. Super waves are best to set up 1 minute before objectives come up in order to add pressure to the enemy team, helping you obtain objectives easier. If a super wave is successful, it has the potential of taking a tower; if it is not successful then all you lose is a lot of farm.
 					</div>
 				</div>
 			</div>
