--- a/guide2.html
+++ b/guide2.html
@@ -33,19 +33,19 @@
 				<!--Body-->
 				<div class="info">
 					<div class="para1">
-						One of the biggest things people do, or give advice about, in order to improve is warding. Warding is a pretty large influence to the game, able to swing games solely due to the vision it provides for your team; being able to reveal enemies and objectives alike on the map. This guide will help teach you everything you need to know about warding,; save the repetitive and generic advice which is just to buy wards.
+						One of the biggest things people do, or give advice about, in order to improve is warding. Warding is a pretty large influence to the game, able to swing games solely due to the vision it provides for your team; being able to reveal enemies and objectives alike on the map. This guide will help teach you everything you need to know about warding; save the repetitive and generic advice which is just to buy wards.
 					</div>
 					<div class="para2">
 						There are four entrances to each side of the jungle, and depending on which lane you're in also depends on where you should place your ward. You will primarily want to ward the enemy jungle's entrance, which is closest to you, as much as possible. Doing so will usually keep you safe from ganks.
 					</div>
 					<div class="para2">
-						Now, if you're in top lane, there are two places you should be warding, depending on which side of the map you’re on. If you're on Blue side you should ward the enemy jungle’s entrance; the tri-brush. If you’re on Red side you should be warding the river, between the river brush and baron pit. Be wary also of lane ganks, although they are not as common. If your opponent is pushing you into your tower, be wary of the side brushes in case their jungler has sneaked into them, you can always place lane wards if need be.
+						Now, if you’re in top lane, there are two places you should be warding, depending on which side of the map you’re on. If you’re on Blue side you should ward the enemy jungle’s entrance; the tri-brush. If you’re on Red side you should be warding the river, between the river brush and baron pit. Be wary also of lane ganks, although they are not as common. If your opponent is pushing you into your tower, be wary of the side brushes in case their jungler has sneaked into them, you can always place lane wards if need be.
 					</div>
 					<div class="map">
 						<img src="top map.jpg"/>
 					</div>
 					<div class="para2">
-						If you’re in the mid lane, there are four possible spots you can ward, again depending on which side you’re on. As the my is symmetrical the two spots for either side is the same, which is just the enemy team’s jungle entrance. Try to communicate with your jungler to ward one side of the river whilst you ward the other, so you don’t have to buy wards for both sides the whole game. If you’re jungler is unable to ward for you, then ward the top side of the jungle and stay on that side as well. Doing so will usually provide you with enough time to react in case of any incoming ganks.
+						If you’re in the mid lane, there are four possible spots you can ward, again depending on which side you’re on. As the map is symmetrical the two spots for either side is the same, which is just the enemy team’s jungle entrance. Try to communicate with your jungler to ward one side of the river whilst you ward the other, so you don’t have to buy wards for both sides the whole game. If you’re jungler is unable to ward for you, then ward the top side of the jungle and stay on that side as well. Doing so will usually provide you with enough time to react in case of any incoming ganks.
 					</div>
 					<div class="map">
 						<img src="mid map.jpg"/>
