--- a/guide3.html
+++ b/guide3.html
@@ -36,7 +36,7 @@
 						The Principle of Charity:
 					</div>
 					<div id="quote">
-						“In philosophy and rhetoric, the principle of charity requires interpreting a speakers statements to be rational and, in the case of any argument, considering its best, strongest possible interpretation.” – Norman Baillargeon
+						“In philosophy and rhetoric, the <b>principle of charity</b> requires interpreting a speakers statements to be rational and, in the case of any argument, considering its best, strongest possible interpretation.” – Norman Baillargeon
 					</div>
 					<div class="para2">
 						In terms of League of Legends, what the Principle of Charity is saying is that if you are unsure of what your opponent is doing, then just assume they are being smart. For the majority of the time, your opponent will have knowledge of something that you are unaware of; such as oncoming ganks. The biggest tip as well to avoid dying in League is to not be greedy. Greed is one of the biggest factors of death in lower ranks, where players will tend to chase kills, and fall for baits, which lead to their inevitable deaths.
